clusters/environment/namespaces/environment/dev/external-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 ()
    alb.ingress.kubernetes.io/healthcheck-path: "/health-check"       #fix health check
    alb.ingress.kubernetes.io/successCodes: "404"                     #fix success code
  creationTimestamp: null
  labels:
    io.kompose.service: external-api
  name: external-api
  namespace: dev
spec:
  ports:
  - name: "3002"
    port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    io.kompose.service: external-api
  type: NodePort
